--- a/scss/config/_defaults.scss
+++ b/scss/config/_defaults.scss
@@ -7,6 +7,7 @@ $config: (
   use-theming: true,
   use-reset-styles: true,
   use-default-styles: true,
+  default-color-scheme: light,
   base-font-size: 16,
   spacer: 1rem,
   utility-glue: ':',
