--- a/scss/core/generators/_vars.scss
+++ b/scss/core/generators/_vars.scss
@@ -21,29 +21,23 @@
 }
 
 @mixin generate-css-color-vars($colors-map: (), $property: null, $suffix: null) {
-  $suffix-hsl: if($suffix, '#{$suffix}-hsl', hsl);
-
   /*! purgecss start ignore */
   @each $color, $value in $colors-map {
     @if meta.type-of($value) == color {
-      #{css-var-name($property, $color, $suffix)}: $value;
-      #{css-var-name($property, $color, $suffix-hsl)}: to-hsl($value);
+      #{css-var-name($property, $color, $suffix)}: to-hsl($value);
     } @else {
       @each $shade, $shade-value in $value {
-        #{css-var-name($property, '#{$color}-#{$shade}')}: $shade-value;
-        #{css-var-name($property, '#{$color}-#{$shade}', $suffix-hsl)}: to-hsl($shade-value);
+        #{css-var-name($property, '#{$color}-#{$shade}', $suffix)}: to-hsl($shade-value);
       }
     }
 
     // Accent
     .accent-#{'' + $color} {
       @if meta.type-of($value) == color {
-        #{css-var-name($property, accent)}: $value;
-        #{css-var-name($property, accent, hsl)}: to-hsl($value);
+        #{css-var-name($property, accent, $suffix)}: to-hsl($value);
       } @else {
         @each $shade, $shade-value in $value {
-          #{css-var-name($property, 'accent-#{$shade}')}: $shade-value;
-          #{css-var-name($property, 'accent-#{$shade}', hsl)}: to-hsl($shade-value);
+          #{css-var-name($property, 'accent-#{$shade}', $suffix)}: to-hsl($shade-value);
         }
       }
     }
@@ -51,12 +45,16 @@
   /*! purgecss end ignore */
 }
 
-@mixin generate-color-schemes-css-vars($map: (), $color-scheme: null) {
+@mixin generate-color-schemes-css-vars($colors-map: (), $color-scheme: null) {
   /*! purgecss start ignore */
-  @each $property, $value in $map {
+  @each $color, $value in $colors-map {
     @if meta.type-of($value) == color {
-      #{css-var-name($property, $color-scheme)}: $value;
-      #{css-var-name($property, $color-scheme, hsl)}: to-hsl($value);
+      #{css-var-name($color, $color-scheme)}: to-hsl($value);
+    } @else {
+      @each $shade, $shade-value in $value {
+        $shade: if($color-scheme, '#{$shade}-#{$color-scheme}', $shade);
+        #{css-var-name($color, $shade)}: to-hsl($shade-value);
+      }
     }
   }
   /*! purgecss end ignore */
