--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -1,31 +1,45 @@
 // -------------------------------------
-//   Theming colors
+//   Color Schemes
 // ------------------------------------
 
 @use 'sass:map';
 
 @use 'tokens' as *;
 
-// Light and dark theme colors
-$theme-colors: (
+// Default color schemes: Light and dark theme colors
+$color-schemes: (
   light: (
-    surface-1: map.get($tokens, colors, gray, 0),
-    surface-2: map.get($tokens, colors, white),
-    surface-3: map.get($tokens, colors, gray, 1),
-    surface-4: map.get($tokens, colors, gray, 2),
-    text-1: map.get($tokens, colors, gray, 9),
-    text-2: map.get($tokens, colors, gray, 8),
-    text-3: map.get($tokens, colors, gray, 7),
-    text-4: map.get($tokens, colors, gray, 6),
+    surface: (
+      // 1: map.get($tokens, colors, gray, 0),
+      1: map.get($tokens, colors, primary, 2),
+      2: map.get($tokens, colors, white),
+      3: map.get($tokens, colors, gray, 1),
+      4: map.get($tokens, colors, gray, 2),
+      5: map.get($tokens, colors, gray, 3),
+    ),
+    text: (
+      1: map.get($tokens, colors, gray, 9),
+      2: map.get($tokens, colors, gray, 8),
+      3: map.get($tokens, colors, gray, 7),
+      4: map.get($tokens, colors, gray, 6),
+      5: map.get($tokens, colors, gray, 5),
+    ),
   ),
   dark: (
-    surface-1: map.get($tokens, colors, gray, 9),
-    surface-2: map.get($tokens, colors, gray, 8),
-    surface-3: map.get($tokens, colors, gray, 7),
-    surface-4: map.get($tokens, colors, gray, 6),
-    text-1: map.get($tokens, colors, gray, 0),
-    text-2: map.get($tokens, colors, gray, 1),
-    text-3: map.get($tokens, colors, gray, 2),
-    text-4: map.get($tokens, colors, gray, 3),
+    surface: (
+      // 1: map.get($tokens, colors, gray, 9),
+      1: map.get($tokens, colors, blue, 2),
+      2: map.get($tokens, colors, gray, 8),
+      3: map.get($tokens, colors, gray, 7),
+      4: map.get($tokens, colors, gray, 6),
+      5: map.get($tokens, colors, gray, 5),
+    ),
+    text: (
+      1: map.get($tokens, colors, gray, 0),
+      2: map.get($tokens, colors, gray, 1),
+      3: map.get($tokens, colors, gray, 2),
+      4: map.get($tokens, colors, gray, 3),
+      5: map.get($tokens, colors, gray, 4),
+    ),
   ),
 ) !default;
