--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -4,54 +4,58 @@
 
 @use 'sass:map';
 
+@use '../core/api/config' as *;
 @use '../core/generators/vars' as *;
 @use 'tokens' as *;
 @use 'colors' as *;
 
+$default-theme: map.deep-merge(
+  (
+    color-schemes: $color-schemes,
+  ),
+  $tokens
+);
+
 $theme: () !default;
-$theme: map.deep-merge($theme-colors, $theme);
-$theme: map.deep-merge($tokens, $theme);
+$theme: map.deep-merge($default-theme, $theme);
 
 // --------------------------------
 //   Mixins
 // --------------------------------
 
-// Outputs color schemes (light dark, ...)
-@mixin theming-vars() {
+@mixin default-theme($color-schemes-map, $color-scheme: config(default-color-scheme)) {
   html {
-    @each $color-scheme, $color-theme in $theme-colors {
-      @include generate-color-schemes-css-vars($color-theme, $color-scheme);
+    $color-scheme: light;
+    @include generate-color-schemes-css-vars(map.get($color-schemes-map, $color-scheme));
+  }
+}
+
+// Output color vars for each color-scheme
+@mixin create-themes($color-schemes-map) {
+  @include default-theme($color-schemes-map);
+
+  @each $color-scheme, $color in $color-schemes-map {
+    // Color schemes
+    html {
+      @include generate-color-schemes-css-vars($color, $color-scheme);
+    }
+
+    @media (prefers-color-scheme: $color-scheme) {
+      :root {
+        color-scheme: $color-scheme;
+        @include generate-color-schemes-css-vars(map.get($color-schemes, $color-scheme), $color-scheme);
+      }
+    }
+
+    [color-scheme='$color-scheme'],
+    [data-theme='$color-scheme'] {
+      color-scheme: $color-scheme;
+      @include generate-color-schemes-css-vars(map.get($color-schemes, $color-scheme), $color-scheme);
     }
   }
+}
 
-  :root {
-    @include generate-color-schemes-css-vars(map.get($theme-colors, light));
-    color-scheme: light;
-  }
-
-  @media (prefers-color-scheme: light) {
-    :root {
-      @include generate-color-schemes-css-vars(map.get($theme-colors, light));
-      color-scheme: light;
-    }
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      @include generate-color-schemes-css-vars(map.get($theme-colors, dark));
-      color-scheme: dark;
-    }
-  }
-
-  [color-scheme='light'],
-  [data-theme='light'] {
-    @include generate-color-schemes-css-vars(map.get($theme-colors, light));
-    color-scheme: light;
-  }
-
-  [color-scheme='dark'],
-  [data-theme='dark'] {
-    @include generate-color-schemes-css-vars(map.get($theme-colors, dark));
-    color-scheme: dark;
-  }
+// Outputs color schemes (light dark, ...)
+@mixin theming-vars {
+  @include create-themes($color-schemes);
 }
