--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -29,7 +29,7 @@ body {
   @include koi.container($padding: true, $center: true);
   @include koi.responsive-margin-block;
   background-color: koi.color(surface, 1);
-  // color: koi.color(text, 1);
+  color: koi.color(text, 1);
 }
 
 h1 {
