--- a/scss/core/api/_theme.scss
+++ b/scss/core/api/_theme.scss
@@ -15,7 +15,8 @@
 //   Functions
 // --------------------------------
 
-// Get a value from the theme
+/* Get a value from the theme using
+  fallbacks definied in the config */
 @function theme($keys...) {
   $property: list.nth($keys, 1);
   $fallback: config(fallbacks, $property);
@@ -26,6 +27,7 @@
   @return map.has-key($theme, $keys...);
 }
 
+// Checks if keys is a valid theme color
 @function is-theme-color($keys...) {
   $colors: map.get($theme, colors);
   $value: map.get($colors, $keys...);
@@ -33,6 +35,8 @@
   @return map.has-key($colors, $keys...) and (meta.type-of($value) == color);
 }
 
+/* Checks if keys is a valid scheme color
+  (theme -> color-schemes) */
 @function is-scheme-color($keys...) {
   $color-schemes: theme(color-schemes);
 
@@ -48,8 +52,8 @@
 //   Mixins
 // --------------------------------
 
-// Match color scheme
-@mixin color-scheme($color-scheme: light) {
+// Match color scheme mode
+@mixin color-mode($color-scheme: light) {
   @media (prefers-color-scheme: $color-scheme) {
     @at-root #{selector.nest(':root:not([data-theme=light]):not([color-scheme=light]):not([color-scheme=dark]):not([data-theme=dark])', &)} {
       @content;
@@ -63,14 +67,14 @@
 
 // Matches data-theme="light" or data-theme="auto"
 @mixin light() {
-  @include color-scheme(light) {
+  @include color-mode(light) {
     @content;
   }
 }
 
 // Matches data-theme="dark" or data-theme="auto"
 @mixin dark() {
-  @include color-scheme(dark) {
+  @include color-mode(dark) {
     @content;
   }
 }
