--- a/scss/base/_animation.scss
+++ b/scss/base/_animation.scss
@@ -5,7 +5,7 @@
 @use '../core' as *;
 @use '../core/helpers/internal' as *;
 
-$custom-prop-name: animation;
+$custom-prop-name: anim;
 
 // --------------------------------
 //   Mixins
