--- a/scss/base/_duration.scss
+++ b/scss/base/_duration.scss
@@ -4,7 +4,7 @@
 
 @use '../core' as *;
 
-$custom-prop-name: duration;
+$custom-prop-name: dur;
 
 // --------------------------------
 //   CSS Custom Properties
