--- a/scss/config/_defaults.scss
+++ b/scss/config/_defaults.scss
@@ -27,7 +27,7 @@ $config: (
     layer: base,
     leading: normal,
     radius: md,
-    shadow: md,
+    shadow: sm,
     timing: ease,
     tracking: normal,
   ),
