--- a/scss/base/_timing.scss
+++ b/scss/base/_timing.scss
@@ -4,7 +4,7 @@
 
 @use '../core' as *;
 
-$custom-prop-name: timing;
+$custom-prop-name: time;
 
 // --------------------------------
 //   CSS Custom Properties
