--- a/scss/core/generators/_vars.scss
+++ b/scss/core/generators/_vars.scss
@@ -34,10 +34,10 @@
     // Accent
     .accent-#{'' + $color} {
       @if meta.type-of($value) == color {
-        #{css-var-name($property, accent, $suffix)}: to-hsl($value);
+        #{css-var-name(accent, $suffix)}: to-hsl($value);
       } @else {
         @each $shade, $shade-value in $value {
-          #{css-var-name($property, 'accent-#{$shade}', $suffix)}: to-hsl($shade-value);
+          #{css-var-name('accent-#{$shade}', $suffix)}: to-hsl($shade-value);
         }
       }
     }
@@ -45,15 +45,14 @@
   /*! purgecss end ignore */
 }
 
-@mixin generate-color-schemes-css-vars($colors-map: (), $color-scheme: null) {
+@mixin generate-color-scheme-css-vars($colors-map: (), $color-scheme: null) {
   /*! purgecss start ignore */
   @each $color, $value in $colors-map {
     @if meta.type-of($value) == color {
-      #{css-var-name($color, $color-scheme)}: to-hsl($value);
+      #{css-var-name($color, 'clr', $color-scheme)}: to-hsl($value);
     } @else {
       @each $shade, $shade-value in $value {
-        $shade: if($color-scheme, '#{$shade}-#{$color-scheme}', $shade);
-        #{css-var-name($color, $shade)}: to-hsl($shade-value);
+        #{css-var-name('#{$color}#{$shade}', 'clr', $color-scheme)}: to-hsl($shade-value);
       }
     }
   }
