--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -4,25 +4,31 @@
 
 @use 'sass:map';
 
+@use '../core/helpers/internal' as *;
 @use 'tokens' as *;
 
-// Default color schemes: Light and dark theme colors
+/* The CSS variables can be access as name-color,
+  example: var(--surface-1-color). */
+
 $color-schemes: (
   light: (
     surface: (
+      // 1: css-var(clr-gray-0),
       1: map.get($tokens, colors, gray, 0),
       2: map.get($tokens, colors, white),
       3: map.get($tokens, colors, gray, 1),
       4: map.get($tokens, colors, gray, 2),
-      5: map.get($tokens, colors, gray, 3),
     ),
     text: (
       1: map.get($tokens, colors, gray, 9),
       2: map.get($tokens, colors, gray, 8),
       3: map.get($tokens, colors, gray, 7),
       4: map.get($tokens, colors, gray, 6),
-      5: map.get($tokens, colors, gray, 5),
     ),
+    code-bg: map.get($tokens, colors, gray, 9),
+    code-text: map.get($tokens, colors, gray, 1),
+    quote-text: map.get($tokens, colors, gray, 8),
+    quote-border: map.get($tokens, colors, red, 6),
   ),
   dark: (
     surface: (
@@ -30,14 +36,16 @@ $color-schemes: (
       2: map.get($tokens, colors, gray, 8),
       3: map.get($tokens, colors, gray, 7),
       4: map.get($tokens, colors, gray, 6),
-      5: map.get($tokens, colors, gray, 5),
     ),
     text: (
       1: map.get($tokens, colors, gray, 0),
       2: map.get($tokens, colors, gray, 1),
       3: map.get($tokens, colors, gray, 2),
       4: map.get($tokens, colors, gray, 3),
-      5: map.get($tokens, colors, gray, 4),
     ),
+    code-bg: map.get($tokens, colors, black),
+    code-text: map.get($tokens, colors, gray, 1),
+    quote-text: map.get($tokens, colors, gray, 1),
+    quote-border: map.get($tokens, colors, red, 6),
   ),
 ) !default;
