--- a/scss/base/_shadow.scss
+++ b/scss/base/_shadow.scss
@@ -4,7 +4,7 @@
 
 @use '../core' as *;
 
-$custom-prop-name: sh;
+$custom-prop-name: shadow;
 
 // --------------------------------
 //   CSS Custom Properties
