--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -439,81 +439,81 @@ select {
 }
 
 :root {
-  --anim-blink: blink 1s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
-  --anim-bounce: bounce 2s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
-  --anim-fade-in: fade-in 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  --anim-fade-out: fade-out 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  --anim-float: float 3s cubic-bezier(0.4, 0, 0.2, 1) infinite;
-  --anim-ping: ping 3s cubic-bezier(0, 0, 0.2, 1) infinite;
-  --anim-pulse: pulse 2s cubic-bezier(0, 0, 0.2, 1) infinite;
-  --anim-spin: spin 2s linear infinite;
-  --anim-ring: ring 500ms linear infinite;
+  --animation-blink: blink 1s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+  --animation-bounce: bounce 2s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+  --animation-fade-in: fade-in 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  --animation-fade-out: fade-out 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  --animation-float: float 3s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+  --animation-ping: ping 3s cubic-bezier(0, 0, 0.2, 1) infinite;
+  --animation-pulse: pulse 2s cubic-bezier(0, 0, 0.2, 1) infinite;
+  --animation-spin: spin 2s linear infinite;
+  --animation-ring: ring 500ms linear infinite;
 }
 
 :root {
   /*! purgecss start ignore */
-  --clr-white: 0deg, 0%, 100%;
-  --clr-black: 0deg, 0%, 0%;
-  --clr-primary-0: 160deg, 88.2352941176%, 96.6666666667%;
-  --clr-primary-1: 161.1764705882deg, 92.7272727273%, 89.2156862745%;
-  --clr-primary-2: 162.7722772277deg, 90.990990991%, 78.2352941176%;
-  --clr-primary-3: 165deg, 83.5164835165%, 64.3137254902%;
-  --clr-primary-4: 166.9273743017deg, 71.3147410359%, 49.2156862745%;
-  --clr-primary-5: 167.8651685393deg, 87.2549019608%, 40%;
-  --clr-primary-6: 169.2413793103deg, 90.0621118012%, 31.568627451%;
-  --clr-primary-7: 169.7297297297deg, 83.4586466165%, 26.0784313725%;
-  --clr-primary-8: 170.6024096386deg, 74.7747747748%, 21.7647058824%;
-  --clr-primary-9: 170.4761904762deg, 64.9484536082%, 19.0196078431%;
-  --clr-gray-0: 0deg, 0%, 98.0392156863%;
-  --clr-gray-1: 0deg, 0%, 96.0784313725%;
-  --clr-gray-2: 0deg, 0%, 89.8039215686%;
-  --clr-gray-3: 0deg, 0%, 83.137254902%;
-  --clr-gray-4: 0deg, 0%, 63.9215686275%;
-  --clr-gray-5: 0deg, 0%, 45.0980392157%;
-  --clr-gray-6: 0deg, 0%, 32.1568627451%;
-  --clr-gray-7: 0deg, 0%, 25.0980392157%;
-  --clr-gray-8: 0deg, 0%, 14.9019607843%;
-  --clr-gray-9: 0deg, 0%, 9.0196078431%;
-  --clr-red-0: 0deg, 85.7142857143%, 97.2549019608%;
-  --clr-red-1: 0deg, 93.3333333333%, 94.1176470588%;
-  --clr-red-2: 0deg, 96.2962962963%, 89.4117647059%;
-  --clr-red-3: 0deg, 93.5483870968%, 81.7647058824%;
-  --clr-red-4: 0deg, 90.6040268456%, 70.7843137255%;
-  --clr-red-5: 0deg, 84.236453202%, 60.1960784314%;
-  --clr-red-6: 0deg, 72.2222222222%, 50.5882352941%;
-  --clr-red-7: 0deg, 73.7089201878%, 41.7647058824%;
-  --clr-red-8: 0deg, 70%, 35.2941176471%;
-  --clr-red-9: 0deg, 62.8205128205%, 30.5882352941%;
-  --clr-yellow-0: 54.5454545455deg, 91.6666666667%, 95.2941176471%;
-  --clr-yellow-1: 54.9152542373deg, 96.7213114754%, 88.0392156863%;
-  --clr-yellow-2: 52.7586206897deg, 98.3050847458%, 76.862745098%;
-  --clr-yellow-3: 50.4395604396deg, 97.8494623656%, 63.5294117647%;
-  --clr-yellow-4: 47.9475982533deg, 95.8158995816%, 53.137254902%;
-  --clr-yellow-5: 45.3982300885deg, 93.3884297521%, 47.4509803922%;
-  --clr-yellow-6: 40.6060606061deg, 96.1165048544%, 40.3921568627%;
-  --clr-yellow-7: 35.4545454545deg, 91.6666666667%, 32.9411764706%;
-  --clr-yellow-8: 31.7647058824deg, 80.9523809524%, 28.8235294118%;
-  --clr-yellow-9: 28.4210526316deg, 72.5190839695%, 25.6862745098%;
-  --clr-green-0: 138.4615384615deg, 76.4705882353%, 96.6666666667%;
-  --clr-green-1: 140.625deg, 84.2105263158%, 92.5490196078%;
-  --clr-green-2: 141deg, 78.9473684211%, 85.0980392157%;
-  --clr-green-3: 141.7142857143deg, 76.6423357664%, 73.137254902%;
-  --clr-green-4: 141.8918918919deg, 69.1588785047%, 58.0392156863%;
-  --clr-green-5: 142.0858895706deg, 70.5627705628%, 45.2941176471%;
-  --clr-green-6: 142.1276595745deg, 76.2162162162%, 36.2745098039%;
-  --clr-green-7: 142.4299065421deg, 71.8120805369%, 29.2156862745%;
-  --clr-green-8: 142.7848101266deg, 64.2276422764%, 24.1176470588%;
-  --clr-green-9: 143.8095238095deg, 61.1650485437%, 20.1960784314%;
-  --clr-blue-0: 213.75deg, 100%, 96.862745098%;
-  --clr-blue-1: 214.2857142857deg, 94.5945945946%, 92.7450980392%;
-  --clr-blue-2: 213.3333333333deg, 96.9230769231%, 87.2549019608%;
-  --clr-blue-3: 211.6981132075deg, 96.3636363636%, 78.431372549%;
-  --clr-blue-4: 213.1168831169deg, 93.9024390244%, 67.8431372549%;
-  --clr-blue-5: 217.2192513369deg, 91.2195121951%, 59.8039215686%;
-  --clr-blue-6: 221.2121212121deg, 83.1932773109%, 53.3333333333%;
-  --clr-blue-7: 224.2780748663deg, 76.3265306122%, 48.0392156863%;
-  --clr-blue-8: 225.9310344828deg, 70.7317073171%, 40.1960784314%;
-  --clr-blue-9: 224.4444444444deg, 64.2857142857%, 32.9411764706%;
+  --c-white: 0deg, 0%, 100%;
+  --c-black: 0deg, 0%, 0%;
+  --c-primary-0: 160deg, 88.2352941176%, 96.6666666667%;
+  --c-primary-1: 161.1764705882deg, 92.7272727273%, 89.2156862745%;
+  --c-primary-2: 162.7722772277deg, 90.990990991%, 78.2352941176%;
+  --c-primary-3: 165deg, 83.5164835165%, 64.3137254902%;
+  --c-primary-4: 166.9273743017deg, 71.3147410359%, 49.2156862745%;
+  --c-primary-5: 167.8651685393deg, 87.2549019608%, 40%;
+  --c-primary-6: 169.2413793103deg, 90.0621118012%, 31.568627451%;
+  --c-primary-7: 169.7297297297deg, 83.4586466165%, 26.0784313725%;
+  --c-primary-8: 170.6024096386deg, 74.7747747748%, 21.7647058824%;
+  --c-primary-9: 170.4761904762deg, 64.9484536082%, 19.0196078431%;
+  --c-gray-0: 0deg, 0%, 98.0392156863%;
+  --c-gray-1: 0deg, 0%, 96.0784313725%;
+  --c-gray-2: 0deg, 0%, 89.8039215686%;
+  --c-gray-3: 0deg, 0%, 83.137254902%;
+  --c-gray-4: 0deg, 0%, 63.9215686275%;
+  --c-gray-5: 0deg, 0%, 45.0980392157%;
+  --c-gray-6: 0deg, 0%, 32.1568627451%;
+  --c-gray-7: 0deg, 0%, 25.0980392157%;
+  --c-gray-8: 0deg, 0%, 14.9019607843%;
+  --c-gray-9: 0deg, 0%, 9.0196078431%;
+  --c-red-0: 0deg, 85.7142857143%, 97.2549019608%;
+  --c-red-1: 0deg, 93.3333333333%, 94.1176470588%;
+  --c-red-2: 0deg, 96.2962962963%, 89.4117647059%;
+  --c-red-3: 0deg, 93.5483870968%, 81.7647058824%;
+  --c-red-4: 0deg, 90.6040268456%, 70.7843137255%;
+  --c-red-5: 0deg, 84.236453202%, 60.1960784314%;
+  --c-red-6: 0deg, 72.2222222222%, 50.5882352941%;
+  --c-red-7: 0deg, 73.7089201878%, 41.7647058824%;
+  --c-red-8: 0deg, 70%, 35.2941176471%;
+  --c-red-9: 0deg, 62.8205128205%, 30.5882352941%;
+  --c-yellow-0: 54.5454545455deg, 91.6666666667%, 95.2941176471%;
+  --c-yellow-1: 54.9152542373deg, 96.7213114754%, 88.0392156863%;
+  --c-yellow-2: 52.7586206897deg, 98.3050847458%, 76.862745098%;
+  --c-yellow-3: 50.4395604396deg, 97.8494623656%, 63.5294117647%;
+  --c-yellow-4: 47.9475982533deg, 95.8158995816%, 53.137254902%;
+  --c-yellow-5: 45.3982300885deg, 93.3884297521%, 47.4509803922%;
+  --c-yellow-6: 40.6060606061deg, 96.1165048544%, 40.3921568627%;
+  --c-yellow-7: 35.4545454545deg, 91.6666666667%, 32.9411764706%;
+  --c-yellow-8: 31.7647058824deg, 80.9523809524%, 28.8235294118%;
+  --c-yellow-9: 28.4210526316deg, 72.5190839695%, 25.6862745098%;
+  --c-green-0: 138.4615384615deg, 76.4705882353%, 96.6666666667%;
+  --c-green-1: 140.625deg, 84.2105263158%, 92.5490196078%;
+  --c-green-2: 141deg, 78.9473684211%, 85.0980392157%;
+  --c-green-3: 141.7142857143deg, 76.6423357664%, 73.137254902%;
+  --c-green-4: 141.8918918919deg, 69.1588785047%, 58.0392156863%;
+  --c-green-5: 142.0858895706deg, 70.5627705628%, 45.2941176471%;
+  --c-green-6: 142.1276595745deg, 76.2162162162%, 36.2745098039%;
+  --c-green-7: 142.4299065421deg, 71.8120805369%, 29.2156862745%;
+  --c-green-8: 142.7848101266deg, 64.2276422764%, 24.1176470588%;
+  --c-green-9: 143.8095238095deg, 61.1650485437%, 20.1960784314%;
+  --c-blue-0: 213.75deg, 100%, 96.862745098%;
+  --c-blue-1: 214.2857142857deg, 94.5945945946%, 92.7450980392%;
+  --c-blue-2: 213.3333333333deg, 96.9230769231%, 87.2549019608%;
+  --c-blue-3: 211.6981132075deg, 96.3636363636%, 78.431372549%;
+  --c-blue-4: 213.1168831169deg, 93.9024390244%, 67.8431372549%;
+  --c-blue-5: 217.2192513369deg, 91.2195121951%, 59.8039215686%;
+  --c-blue-6: 221.2121212121deg, 83.1932773109%, 53.3333333333%;
+  --c-blue-7: 224.2780748663deg, 76.3265306122%, 48.0392156863%;
+  --c-blue-8: 225.9310344828deg, 70.7317073171%, 40.1960784314%;
+  --c-blue-9: 224.4444444444deg, 64.2857142857%, 32.9411764706%;
   /*! purgecss end ignore */
 }
 :root .accent-white {
@@ -596,54 +596,54 @@ select {
 }
 
 :root {
-  --dur-ultra-fast: 25ms;
-  --dur-super-fast: 50ms;
-  --dur-fastest: 75ms;
-  --dur-faster: 100ms;
-  --dur-fast: 150ms;
-  --dur-normal: 200ms;
-  --dur-slow: 300ms;
-  --dur-slower: 500ms;
-  --dur-slowest: 600ms;
-  --dur-super-slow: 800ms;
-  --dur-ultra-slow: 1200ms;
-  --dur-1: 1s;
-  --dur-2: 2s;
-  --dur-3: 3s;
-  --dur-4: 4s;
-  --dur-5: 5s;
-  --dur-25: 25ms;
-  --dur-50: 50ms;
-  --dur-75: 75ms;
-  --dur-100: 100ms;
-  --dur-150: 150ms;
-  --dur-200: 200ms;
-  --dur-300: 300ms;
-  --dur-500: 500ms;
-  --dur-700: 700ms;
-  --dur-1000: 1000ms;
+  --duration-ultra-fast: 25ms;
+  --duration-super-fast: 50ms;
+  --duration-fastest: 75ms;
+  --duration-faster: 100ms;
+  --duration-fast: 150ms;
+  --duration-normal: 200ms;
+  --duration-slow: 300ms;
+  --duration-slower: 500ms;
+  --duration-slowest: 600ms;
+  --duration-super-slow: 800ms;
+  --duration-ultra-slow: 1200ms;
+  --duration-1: 1s;
+  --duration-2: 2s;
+  --duration-3: 3s;
+  --duration-4: 4s;
+  --duration-5: 5s;
+  --duration-25: 25ms;
+  --duration-50: 50ms;
+  --duration-75: 75ms;
+  --duration-100: 100ms;
+  --duration-150: 150ms;
+  --duration-200: 200ms;
+  --duration-300: 300ms;
+  --duration-500: 500ms;
+  --duration-700: 700ms;
+  --duration-1000: 1000ms;
 }
 
 :root {
-  --sh-xs: 0 1px 2px 0 rgba(0 0 0 / 0.05);
-  --sh-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --sh-md: 0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06);
-  --sh-lg: 0 10px 15px -3px rgba(0 0 0 / 0.1), 0 4px 6px -2px rgba(0 0 0 / 0.05);
-  --sh-xl: 0 20px 25px -5px rgba(0 0 0 / 0.1), 0 10px 10px -5px rgba(0 0 0 / 0.04);
-  --sh-2xl: 0 25px 50px -12px rgba(0 0 0 / 0.25);
-  --sh-inner: inset 0 2px 4px 0 rgba(0 0 0 / 0.06);
-  --sh-outline: 0 0 0 3px rgba(66 153 225 / 0.5);
-  --sh-solid: 0 0 0 2px currentColor;
-  --sh-none: 0 0 #0000;
+  --shadow-xs: 0 1px 2px 0 rgba(0 0 0 / 0.05);
+  --shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --shadow-md: 0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06);
+  --shadow-lg: 0 10px 15px -3px rgba(0 0 0 / 0.1), 0 4px 6px -2px rgba(0 0 0 / 0.05);
+  --shadow-xl: 0 20px 25px -5px rgba(0 0 0 / 0.1), 0 10px 10px -5px rgba(0 0 0 / 0.04);
+  --shadow-2xl: 0 25px 50px -12px rgba(0 0 0 / 0.25);
+  --shadow-inner: inset 0 2px 4px 0 rgba(0 0 0 / 0.06);
+  --shadow-outline: 0 0 0 3px rgba(66 153 225 / 0.5);
+  --shadow-solid: 0 0 0 2px currentColor;
+  --shadow-none: 0 0 #0000;
 }
 
 :root {
-  --time-linear: linear;
-  --time-ease: cubic-bezier(0.25, 0.1, 0.25, 1);
-  --time-ease-in: cubic-bezier(0.4, 0, 1, 1);
-  --time-ease-out: cubic-bezier(0, 0, 0.2, 1);
-  --time-ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
-  --time-ease-elastic: cubic-bezier(0.5, 1, 0.75, 1.25);
+  ---linear: linear;
+  ---ease: cubic-bezier(0.25, 0.1, 0.25, 1);
+  ---ease-in: cubic-bezier(0.4, 0, 1, 1);
+  ---ease-out: cubic-bezier(0, 0, 0.2, 1);
+  ---ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+  ---ease-elastic: cubic-bezier(0.5, 1, 0.75, 1.25);
 }
 
 /*! purgecss start ignore */
