--- a/scss/base/_color.scss
+++ b/scss/base/_color.scss
@@ -4,7 +4,7 @@
 
 @use '../core' as *;
 
-$custom-prop-name: clr;
+$custom-prop-name: c;
 
 // --------------------------------
 //   CSS Custom Properties
